Update frontend with UI polishing, legal pages, and carousel

--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,53 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vellix | Streaming Premium</title>
+
+  <!-- Primary Meta Tags -->
+  <title>Vellix | Tu Plataforma Premium de Streaming de Películas y Series</title>
+  <meta name="title" content="Vellix | Tu Plataforma Premium de Streaming de Películas y Series" />
+  <meta name="description"
+    content="Disfruta de las mejores películas y series en alta definición con Vellix. La experiencia premium de streaming que buscabas, con tendencias mundiales y estrenos exclusivos." />
+  <meta name="keywords"
+    content="streaming, películas, series, ver peliculas gratis, estrenos, cine en casa, vellix, stream" />
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="Spanish" />
+  <meta name="author" content="Vellix" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://vellix.web.app/" />
+  <meta property="og:title" content="Vellix | Tu Plataforma Premium de Streaming" />
+  <meta property="og:description"
+    content="Las mejores películas y series en un solo lugar. Tendencias mundiales, estrenos y mucho más en Vellix." />
+  <meta property="og:image" content="https://vellix.web.app/logo.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://vellix.web.app/" />
+  <meta property="twitter:title" content="Vellix | Tu Plataforma Premium de Streaming" />
+  <meta property="twitter:description"
+    content="Las mejores películas y series en un solo lugar. Tendencias mundiales, estrenos y mucho más en Vellix." />
+  <meta property="twitter:image" content="https://vellix.web.app/logo.png" />
+
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Vellix",
+      "url": "https://vellix.web.app/",
+      "description": "Plataforma premium de streaming de películas y series.",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://vellix.web.app/search?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+  </script>
 </head>
 
 <body>
